--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="src/styles/index.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
+    <link rel="preload" as="image" href="/src/assets/bg-1.webp">
   </head>
   <body class="bg-site">
     <div id="root"></div>
